Css changes to fix z-index problems

--- a/src/stylesheets/SqsMenu.scss
+++ b/src/stylesheets/SqsMenu.scss
@@ -317,7 +317,7 @@ li.l1-container:hover {
 .sqs-menu-container { /* main container for expanded menu */
   	display: none;
   	position: absolute;
-    z-index: 10002 !important;
+    //z-index: 10002 !important;
     overflow-x: hidden;
 }
 
@@ -372,6 +372,7 @@ li.l1-container:hover {
 #aux-menu {
   box-shadow: 0px .5em .5em .25em $shadow-color;
   position: fixed;
+  z-index: 1;
 }
 
 /*
@@ -446,7 +447,7 @@ li.l1-container:hover {
   border-bottom: 1px solid #aaa;
   font-size: 1.2em;
   font-weight: 600;
-  z-index: 1000;
+  //z-index: 1000;
 }
 
 .first-level-item:hover {
